--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "16.1.6",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
+    "react-activity-calendar": "^3.1.1",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0"
