--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-activity-calendar": "^3.1.1",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
-    "three": "^0.182.0"
+    "three": "^0.182.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
