--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@lottiefiles/dotlottie-react": "^0.17.14",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.5.0",
+    "@tailwindcss/typography": "^0.5.19",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
@@ -21,6 +22,7 @@
     "react": "19.2.3",
     "react-activity-calendar": "^3.1.1",
     "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0",
     "zod": "^4.3.6"
